--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,9 @@ android:
     # - tools
 
     # The BuildTools version used by your project
+    - tools
     - build-tools-23.0.3
+    - android-23
 
     # The SDK version used to compile your project
     - android-23
