--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,10 @@ android:
     # The BuildTools version used by your project
     - tools
     - build-tools-23.0.3
-    - android-23
+
+    # Additional components
+    - extra-google-m2repository
+    - extra-android-m2repository
 
     # The SDK version used to compile your project
     - android-23
