--- a/.travis.yml
+++ b/.travis.yml
@@ -43,3 +43,13 @@ script:
   - echo $ADB_INSTALL_TIMEOUT
   - android list target
   - ./gradlew connectedAndroidTest
+
+  after_failure:
+  # Customize this line, 'android' is the specific app module name of this project. Shows log.
+  - export MY_MOD="SimpleLock"
+  - export MY_LOG_DIR="$(pwd)/${MY_MOD}/app/build/reports/androidTests/connected/"
+  - pwd && cd "${MY_LOG_DIR:-.}" && pwd && ls -al
+  - sudo apt-get install -qq lynx && lynx --dump index.html > myIndex.log
+  - lynx --dump com.android.builder.testing.ConnectedDevice.html > myConnectedDevice.log
+  - lynx --dump com.android.builder.testing.html > myTesting.log
+  - for file in *.log; do echo "$file"; echo "====================="; cat "$file"; done || true
