Unable to fix travis problems

--- a/simplelock/build.gradle
+++ b/simplelock/build.gradle
@@ -19,6 +19,9 @@ android {
     lintOptions {
         abortOnError false
     }
+    adbOptions {
+        timeOutInMs 300000 // set timeout to 5 minute
+    }
 }
 
 dependencies {
