--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ script:
 after_failure:
   # Customize this line, 'android' is the specific app module name of this project. Shows log.
   - export MY_MOD="SimpleLock"
-  - export MY_LOG_DIR="$(pwd)/${MY_MOD}/app/build/reports/androidTests/connected/"
+  - export MY_LOG_DIR="$(pwd)/app/build/reports/androidTests/connected/"
   - pwd && cd "${MY_LOG_DIR:-.}" && pwd && ls -al
   - sudo apt-get install -qq lynx && lynx --dump index.html > myIndex.log
   - lynx --dump com.android.builder.testing.ConnectedDevice.html > myConnectedDevice.log
