--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,10 @@ android {
     lintOptions {
         abortOnError false
     }
+    // This enables long timeouts required on slow environments, e.g. Travis
     adbOptions {
-        timeOutInMs 60000 // set timeout to 1 minute
+        timeOutInMs 10 * 60 * 1000  // set timeout to 10 minutes
+        installOptions "-d","-t"
     }
 }
 
